[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Computer/Computer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Background/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Level/Level.gd" type="Script" id=3]

[node name="Root" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="Computer" parent="." instance=ExtResource( 1 )]

[node name="DialogTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="FinishTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Tween" type="Tween" parent="."]
[connection signal="dialogue_shown" from="Background" to="." method="_on_Background_dialogue_shown"]
[connection signal="text_changed" from="Computer" to="." method="_on_Computer_text_changed"]
[connection signal="timeout" from="DialogTimer" to="." method="_on_DialogTimer_timeout"]
[connection signal="timeout" from="FinishTimer" to="." method="_on_FinishTimer_timeout"]
